abandoned QGIS in favor of GRASS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(cond2sal)
 export(grabclean)
 export(grabget)
 export(grabplot)
-export(qmap)
+export(grassmap)
 export(streamclean)
 export(streamget)
 export(streaminterp)
