fix grassmap dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,9 @@ export(streaminterp)
 export(streamparse)
 export(streamqa)
 export(surfplot)
+import(gpclib)
+import(maptools)
+import(rgeos)
 import(rgrass7)
 importFrom(MASS,stepAIC)
 importFrom(car,vif)
