--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(avmap)
 export(chlcoef)
 export(chlmap)
 export(cond2sal)
+export(coordinatize)
+export(date456posix)
 export(grabclean)
 export(grabget)
 export(grabplot)
@@ -15,6 +17,8 @@ export(streaminterp)
 export(streamparse)
 export(streamqa)
 export(surfplot)
+export(validdbhydro)
+import(dbhydroR)
 import(maptools)
 import(rgeos)
 import(rgrass7)
