add grassmap colorramp dependencies, log-scaling option

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,8 @@ import(dbhydroR)
 import(maptools)
 import(rgeos)
 import(rgrass7)
+import(scales)
+import(viridis)
 importFrom(MASS,stepAIC)
 importFrom(car,vif)
 importFrom(gdata,resample)
