--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(grabclean)
 export(grabget)
 export(grabplot)
 export(grassmap)
+export(logramp)
 export(streamclean)
 export(streamget)
 export(streaminterp)
