move dbhydroR to Suggests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,9 @@ Date: 2015-05-24
 Author: Joseph Stachelek <jstachel@sfwmd.gov>
 Maintainer: Joseph Stachelek <jstachel@sfwmd.gov>
 Imports:
-    MASS,car,gdata,ipdw,latticeExtra,raster,rasterVis,rgdal,sp,zoo,rgrass7,dbhydroR,maptools,rgeos,scales,viridis
+    MASS,car,gdata,ipdw,latticeExtra,raster,rasterVis,rgdal,sp,zoo,rgrass7,maptools,rgeos,scales,viridis
+Suggests:
+  dbhydroR
 License: GPL (>= 2)
 LazyData: true
 KeepSource: true
