update docs to pass most devtools::check() notes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,14 +12,13 @@ export(grabget)
 export(grabplot)
 export(grassmap)
 export(logramp)
+export(mdy2mmyyyy)
 export(streamclean)
 export(streamget)
 export(streaminterp)
 export(streamparse)
 export(streamqa)
 export(surfplot)
-export(validdbhydro)
-import(dbhydroR)
 import(maptools)
 import(rgeos)
 import(rgrass7)
@@ -39,7 +38,6 @@ importFrom(raster,stack)
 importFrom(raster,writeRaster)
 importFrom(rasterVis,levelplot)
 importFrom(rgdal,readOGR)
-importFrom(rgeos,gConvexHull)
 importFrom(sp,CRS)
 importFrom(sp,SpatialPointsDataFrame)
 importFrom(sp,coordinates)
