add missing create_rlist export tag

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(chlcoef)
 export(chlmap)
 export(cond2sal)
 export(coordinatize)
+export(create_rlist)
 export(date456posix)
 export(grabclean)
 export(grabget)
