--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,10 @@ Version: 0.1
 Date: 2016-01-29
 Author: Joseph Stachelek <jstachel@sfwmd.gov>
 Maintainer: Joseph Stachelek <jstachel@sfwmd.gov>
-Imports:
+Imports: 
     MASS,car,gdata,ipdw,latticeExtra,raster,rasterVis,rgdal,sp,zoo,rgrass7,maptools,rgeos,scales,viridis
 License: GPL (>= 2)
 LazyData: true
 KeepSource: true
 RoxygenNote: 5.0.1
+Suggests: testthat
