add surfget function, closes #7

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(streamget)
 export(streaminterp)
 export(streamparse)
 export(streamqa)
+export(surfget)
 export(surfplot)
 import(maptools)
 import(rgeos)
