cleanup base function import statements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ import(viridis)
 importFrom(MASS,stepAIC)
 importFrom(car,vif)
 importFrom(gdata,resample)
+importFrom(graphics,abline)
 importFrom(ipdw,ipdwInterp)
 importFrom(ipdw,pathdistGen)
 importFrom(latticeExtra,layer)
@@ -47,5 +48,14 @@ importFrom(sp,coordinates)
 importFrom(sp,proj4string)
 importFrom(sp,spTransform)
 importFrom(sp,spplot)
+importFrom(stats,as.formula)
+importFrom(stats,complete.cases)
+importFrom(stats,cor)
+importFrom(stats,fitted)
+importFrom(stats,lm)
+importFrom(stats,pf)
+importFrom(utils,read.csv)
+importFrom(utils,read.table)
+importFrom(utils,write.csv)
 importFrom(zoo,na.approx)
 importFrom(zoo,zoo)
