pass devtools::check(), add cv_rlist fxn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(chlmap)
 export(cond2sal)
 export(coordinatize)
 export(create_rlist)
+export(cv_rlist)
 export(date456posix)
 export(grabclean)
 export(grabget)
@@ -22,14 +23,20 @@ export(streamparse)
 export(streamqa)
 export(surfget)
 export(surfplot)
+import(dbhydroR)
+import(grDevices)
+import(graphics)
 import(maptools)
+import(methods)
 import(rgeos)
 import(rgrass7)
 import(scales)
+import(stats)
 import(viridis)
 importFrom(MASS,stepAIC)
 importFrom(car,vif)
 importFrom(gdata,resample)
+importFrom(grDevices,col2rgb)
 importFrom(graphics,abline)
 importFrom(ipdw,ipdwInterp)
 importFrom(ipdw,pathdistGen)
