--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Date: 2016-01-29
 Author: Joseph Stachelek <jstachel@sfwmd.gov>
 Maintainer: Joseph Stachelek <jstachel@sfwmd.gov>
 Imports: 
-    MASS,car,gdata,ipdw,latticeExtra,raster,rasterVis,rgdal,sp,zoo,rgrass7,maptools,rgeos,scales,viridis
+    MASS,car,gdata,ipdw,latticeExtra,raster,rasterVis,rgdal,sp,zoo,rgrass7,maptools,rgeos,scales,viridis,dbhydroR,methods
 License: GPL (>= 2)
 LazyData: true
 KeepSource: true
