solve viridis warning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,9 +29,7 @@ import(maptools)
 import(methods)
 import(rgeos)
 import(rgrass7)
-import(scales)
 import(stats)
-import(viridis)
 importFrom(MASS,stepAIC)
 importFrom(car,vif)
 importFrom(gdata,resample)
@@ -63,5 +61,6 @@ importFrom(stats,pf)
 importFrom(utils,read.csv)
 importFrom(utils,read.table)
 importFrom(utils,write.csv)
+importFrom(viridis,viridis)
 importFrom(zoo,na.approx)
 importFrom(zoo,zoo)
